// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExchangeReviewSetResultComponent > renders the borderless Impact Ledger at narrow, normal, and wide widths > narrow 1`] = `
"Terms

term         T1    A compact view of    
                   proposed graph       
                   consequences.        
                   [settled]

Intent

goal         G2    Launch safely with   
                   a deliberately long  
                   description that     
                   wraps at narrow      
                   widths [settled]     
                   refs: VVO2           
                   [settled]            
             G3    Keep review          
                   consequences clear   
                   [settled]

Implementation

requirement  REQ5  Rollback is          
                   required [settled]   
                   refs: G2 [settled]

Assurance

obligation   VVO2  Observe the          
                   rollback path        
                   [settled]

Planning

frontier     F4    Close launch         
                   readiness [settled]"
`;

exports[`ExchangeReviewSetResultComponent > renders the borderless Impact Ledger at narrow, normal, and wide widths > normal 1`] = `
"Terms

term         T1    A compact view of proposed graph consequences.       
                   [settled]

Intent

goal         G2    Launch safely with a deliberately long description   
                   that wraps at narrow widths [settled]                
                   refs: VVO2 [settled]                                 
             G3    Keep review consequences clear [settled]

Implementation

requirement  REQ5  Rollback is required [settled]                       
                   refs: G2 [settled]

Assurance

obligation   VVO2  Observe the rollback path [settled]

Planning

frontier     F4    Close launch readiness [settled]"
`;

exports[`ExchangeReviewSetResultComponent > renders the borderless Impact Ledger at narrow, normal, and wide widths > wide 1`] = `
"Terms

term         T1    A compact view of proposed graph consequences. [settled]

Intent

goal         G2    Launch safely with a deliberately long description that wraps at narrow widths   
                   [settled]                                                                        
                   refs: VVO2 [settled]                                                             
             G3    Keep review consequences clear [settled]

Implementation

requirement  REQ5  Rollback is required [settled]                                                   
                   refs: G2 [settled]

Assurance

obligation   VVO2  Observe the rollback path [settled]

Planning

frontier     F4    Close launch readiness [settled]"
`;
